--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,9 @@ python-dateutil==2.7.3
 pytz==2018.5
 PyWavelets==0.5.2
 PyYAML==5.1
-scikit-image==0.14.0
-scikit-learn==0.19.2
+scikit-image
+scikit-learn
 scipy==1.1.0
 six==1.11.0
 toolz==0.9.0
-torch==1.0.0
-torchvision==0.2.1
 tqdm==4.24.0
